--- a/ember-gamers/app/styles/app.scss
+++ b/ember-gamers/app/styles/app.scss
@@ -1,18 +1,54 @@
-@import 'components/color';
-$grey-base: color("grey", "base");
+// Core variables and mixins
+@import "bootstrap/variables";
+@import "bootstrap/mixins";
 
-$primary-color: color("blue", "lighten-2");
-$secondary-color: color("white", "lighten0");
-$button-color: $primary-color;
-$input-focus-color: $primary-color;
-$input-border-color: $grey-base;
-$input-success-color: $grey-base;
+// Theme
+@import 'bower_components/bootswatch-sass/paper/variables';
+@import 'bower_components/bootswatch-sass/paper/bootswatch';
 
-@import 'components/variables';
-@import 'materialize';
-@import 'ember-cli-materialize';
+// Reset and dependencies
+@import "bootstrap/normalize";
+@import "bootstrap/print";
+@import "bootstrap/glyphicons";
 
-.header {
-    text-align: center;
-    padding: 0 0 5vh 0;
-}
+// Core CSS
+@import "bootstrap/scaffolding";
+@import "bootstrap/type";
+@import "bootstrap/code";
+@import "bootstrap/grid";
+@import "bootstrap/tables";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
+
+// Components
+@import "bootstrap/component-animations";
+@import "bootstrap/dropdowns";
+@import "bootstrap/button-groups";
+@import "bootstrap/input-groups";
+@import "bootstrap/navs";
+@import "bootstrap/navbar";
+@import "bootstrap/breadcrumbs";
+@import "bootstrap/pagination";
+@import "bootstrap/pager";
+@import "bootstrap/labels";
+@import "bootstrap/badges";
+@import "bootstrap/jumbotron";
+@import "bootstrap/thumbnails";
+@import "bootstrap/alerts";
+@import "bootstrap/progress-bars";
+@import "bootstrap/media";
+@import "bootstrap/list-group";
+@import "bootstrap/panels";
+@import "bootstrap/responsive-embed";
+@import "bootstrap/wells";
+@import "bootstrap/close";
+
+// Components w/ JavaScript
+@import "bootstrap/modals";
+@import "bootstrap/tooltip";
+@import "bootstrap/popovers";
+@import "bootstrap/carousel";
+
+// Utility classes
+@import "bootstrap/utilities";
+@import "bootstrap/responsive-utilities";
