--- a/ember-gamers/app/templates/login.hbs
+++ b/ember-gamers/app/templates/login.hbs
@@ -1,23 +1,35 @@
 {{outlet}}
 <div class="row">
-<div class="col l6 offset-l3 m8 offset-m2 s10 offset-s1">
+<div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
 {{#if loginFailed}}
-    {{#md-card-panel class="red"
-        bodyClass="white-text"
-        id="login-errors"}}
-        Invalid credentials    
-    {{/md-card-panel}}
 {{/if}}
-{{#if isProcessing}}
-    <div class="col s2 offset-s5">
-    {{md-loader mode="circular" size="small" color="blue" class="center"}}
+<form {{action 'authenticate' on='submit'}} class="form-horizontal">
+  <div class="form-group">
+    <label for="inputUsername" class="col-sm-2 control-label">Username</label>
+    <div class="col-sm-10">
+      {{input type="text" value=identification class="form-control" id="inputUsername" placeholder="Username"}}
     </div>
-{{else}}
-<form {{action 'authenticate' on='submit'}}>
-    {{md-input value=identification label='Username' type="text" required=true validate=true}}
-    {{md-input value=password label='Password' type="password"  required=true validate=true}}
-    {{md-btn-submit icon='mdi-content-send' iconPosition='right' text='Login'}}
+  </div>
+  <div class="form-group">
+    <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      {{input type="password" value=password class="form-control" id="inputPassword" placeholder="Password"}}
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
 </form>
-{{/if}}
 </div>
 </div>
