--- a/ember-gamers/app/templates/index.hbs
+++ b/ember-gamers/app/templates/index.hbs
@@ -46,5 +46,5 @@
 
 </div>
 {{else}}
-<p>This is the authenticated page</p>
+<h1>You are logged in as {{session.currentUser.username}}.</h1>
 {{/unless}}
